--- a/docs/macros.tex
+++ b/docs/macros.tex
@@ -12,3 +12,6 @@
   {\bigskip\selectlanguage{#1}%
    \begin{center}\bfseries\abstractname\end{center}}
   {\par\bigskip}
+
+%Ładne ułamki w jednostkach fizycznych
+\sisetup{per-mode=symbol}%
