--- a/docs/main.tex
+++ b/docs/main.tex
@@ -20,6 +20,7 @@
 \usepackage{dirtree}
 \usepackage{fancyhdr}
 \usepackage{minted}
+\usepackage{siunitx}
 
 \fancypagestyle{plain}{%
 \fancyhf{} % clear all header and footer fields
